--- a/.github/workflows/docker-pub-x86.yml
+++ b/.github/workflows/docker-pub-x86.yml
@@ -1,8 +1,9 @@
 name: docker pub x86
 on:
   push:
-    tags:
-      - '*'
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 env:
   REGISTRY: ghcr.io
