--- a/postgres-appliance/Dockerfile
+++ b/postgres-appliance/Dockerfile
@@ -51,7 +51,7 @@ ARG COMPRESS
 ARG PGOLDVERSIONS="10 11 12 13 14"
 ARG WITH_PERL=false
 
-ARG DEB_PG_SUPPORTED_VERSIONS="$PGOLDVERSIONS $PGVERSION"
+ARG DEB_PG_SUPPORTED_VERSIONS="$PGVERSION"
 
 # Install PostgreSQL, extensions and contribs
 ENV POSTGIS_VERSION=3.3 \
